--- a/css/home.css
+++ b/css/home.css
@@ -66,3 +66,56 @@ header nav a:hover{
 .intro-text .call-to-action a:hover{
     box-shadow: 2px 2px 15px rgba(0,0,0,.2);
 }
+/* intro */
+
+#welcome{
+    background-color: #55c18f;
+    color: #fff;
+    padding-bottom: 50px;
+}
+#welcome h2{
+    padding: 15px;
+    text-align: center;
+}
+#welcome p{
+    padding: 10px;
+}
+.services-container, .works-container{
+    max-width: 700px;
+    margin: 10px auto;
+}
+.service{
+    margin: 20px 10px;
+    text-align: center;
+}
+.service-title{
+    padding: 15px;
+    border-bottom: 2px solid #fff;
+    font-size: 1.4em;
+}
+.work{
+    height: 250px;
+    margin: 20px 10px;
+    background-size: cover;
+    position: relative;
+}
+.work.one{
+    background-image: url(../img/s1.jpeg);
+}   
+.work.two{
+    background-image: url(../img/s2.jpeg);
+}   
+.work.three{
+    background-image: url(../img/s3.jpeg);
+}  
+.work.four{
+    background-image: url(../img/s4.jpeg);
+}
+.work-title{
+    padding: 20px;
+    text-align: center;
+    background-color: rgba(0,0,0,.5);
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+}  
