--- a/css/home.css
+++ b/css/home.css
@@ -119,3 +119,52 @@ header nav a:hover{
     bottom: 0px;
     width: 100%;
 }  
+/* welcome */
+#blog{
+    text-align: center;
+}
+#blog h2{
+    padding: 15px;
+}
+#blog .call-to-action{
+    margin: 10px 0px 20px;
+}
+#blog .call-to-action a, .article-button a{
+    background-color: #55C18F;
+    color: #fff;
+    padding: 15px;
+    display: inline-block;
+    text-decoration: none;
+    transition: box-shadow 0.4s;
+}
+#blog .call-to-action a:hover{
+    box-shadow: 2px 2px 15px rgba(0,0,0,.2);
+}
+.articles-container{
+    max-width: 700px;
+    margin: auto;;
+}
+.article{
+    margin: 20px;
+    background-color: #fff;
+    text-align: center;
+    box-shadow: 0px 0px 15px rgba(0,0,0.2);
+}
+.article-date{
+    padding: 15px;
+    color: #fff;
+    background-color: black;
+}
+.article-title{
+    padding: 15px;
+}
+.article-text{
+    padding: 0px 15px 10px;
+}
+.article-button{
+    width: 50%;
+    margin: auto;
+}
+.article-button a{
+    margin: 20px auto;
+}
