--- a/css/home.css
+++ b/css/home.css
@@ -35,7 +35,7 @@ header nav a:hover{
 /* header */
 
 #intro{
-    min-height: 350px;
+    min-height: 400px;
     background-image: url(../img/garden.jpg);
     background-size: cover;
 }
@@ -196,4 +196,51 @@ header nav a:hover{
 }
 .testimonial p {
     padding: 10px 0px;
+}
+/* testimonials */
+footer{
+    background-color: black;
+    color: #fff;
+    padding: 20px;
+}
+
+footer .services ul{
+    text-decoration: none;
+}
+footer .services li {
+    padding: 5px 0px;
+}
+footer .services h5 {
+    padding: 15px 0px;
+    font-size: 1.2em;
+}
+footer .services {
+    margin-bottom: 20px;
+}
+footer a{
+    color: white;
+}
+footer .contact-info p {
+    padding: 10px 0px;
+}
+footer .contact-form {
+    padding: 20px 0px;
+}
+footer .contact-form input {
+    width: 100%;
+    padding: 15px;
+    margin: 10px 0;
+}
+footer .contact-form button {
+    background-color: #55C18F;
+    color: #fff;
+    padding: 15px;
+    display: inline-block;
+    text-decoration: none;
+    transition: box-shadow 0.4s;
+    margin: 10px 0px;
+    border: none;
+}
+footer .contact-form button:hover{
+    box-shadow: 0px 0px 10px rgba(0,0,0,.3);
 }
