--- a/css/home.css
+++ b/css/home.css
@@ -244,3 +244,52 @@ footer .contact-form button {
 footer .contact-form button:hover{
     box-shadow: 0px 0px 10px rgba(0,0,0,.3);
 }
+/*** footer */
+
+/* media queries */
+@media screen and (min-width:750px){
+    header #logo{
+        display: inline-block;
+        width: 30%;
+        padding: 10px;
+    }
+    header nav{
+        display: inline-block;
+        width: 60%;
+    }
+    #intro{
+        height: 500px;
+    }
+    .intro-text{
+        top: 200px;
+    }
+
+    .services-container {
+        max-width: 500px;
+    }
+    .works-container .work{
+        display: inline-block;
+        width: 46%;
+    }
+    #blog .article, .testimonial{
+        float: left;
+        width: 44%;
+    }
+    #blog .articles-container:after,
+    #testimonials .testimonials-container:after{
+        content: '';
+        display: block;
+        clear: both;
+    }
+    footer .services,
+    footer .contact-info{
+        display: inline-block;
+        width: 46%;
+    }
+    footer .contact-form input{
+        width: 70%;
+    }
+    footer .contact-form button{
+        margin-left: 22px;
+    }
+}
