--- a/css/about.css
+++ b/css/about.css
@@ -113,6 +113,7 @@ header .active{
 
 #our-team{
     text-align: center;
+    padding-bottom: 50px;
 }
 #our-team h2{
     padding: 20px;
@@ -120,7 +121,7 @@ header .active{
     margin-bottom: 30px;
 }
 .member{
-    margin: 10px;
+    margin: 15px;
     padding: 5px;
     padding-bottom: 15px;
     background-color: #fff;
@@ -133,6 +134,34 @@ header .active{
     margin: 10px;
     border-radius: 50%;
 }
+/**** our-team */
+#faq{
+    background-color: #fff;
+}
+#faq h2{
+    padding: 20px;
+    border-bottom: 1px solid rgba(0,0,0,.1);
+    margin-bottom: 30px;
+    text-align: center;
+}
+.faq{
+    margin: 10px;
+}
+.faq p{
+    padding: 5px;
+}
+.faq .q{
+    font-style: italic;
+    color:  #55C18F;
+    font-weight: bold;
+}
+.faq span{
+    font-size: 1.2em;
+    padding-right: 5px;
+    font-weight: bold;
+    font-style: italic;
+}
+
 
 footer{
     background-color: black;
