--- a/css/about.css
+++ b/css/about.css
@@ -222,6 +222,24 @@ footer .contact-form button:hover{
         display: inline-block;
         width: 60%;
     }
+    .event,
+    .member,
+    .faq{
+        float: left;
+        width: 45%;
+        margin: 2%;
+    }
+    .events-container:after,
+    .members-container:after,
+    .faq-container:after{
+        content: "";
+        display: block;
+        clear: both;
+    }
+    .call-to-action{
+        clear: both;
+    }
+
     footer .services,
     footer .contact-info{
         display: inline-block;
@@ -233,4 +251,6 @@ footer .contact-form button:hover{
     footer .contact-form button{
         margin-left: 22px;
     }
+
+
 }
